--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -22,7 +22,7 @@
     <header>
         <!-- Insertar nuestro navbar a esta pantalla usando js -->
         <div id="navbar"></div>
-        <div class="container p-2 mt-5">
+        <div class="container p-2 mt-4">
             <div class="row mt-5">
                 <!-- Automaticamente cada col se va distribuir en la row -->
                 <div class="col-auto">
@@ -51,63 +51,68 @@
 
         <!-- Contenido principal: Tabla de comentarios -->
         <div class="container p-4 mt-4">
-            <table class="table">
-                <thead>
-                    <!-- Encabezados de la tabla -->
-                    <tr class="table-warning">
-                        <th scope="col">Producto</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Fecha de valoración</th>
-                        <th scope="col">Valoración</th>
-                        <th scope="col">Estado</th>
-                        <th scope="col">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td class="align-middle">Comida Rufo Para Perro Cachorro - 44lbs</td>
-                        <td class="align-middle">Juan Alberto</td>
-                        <td class="align-middle">18 de octubre de 2024</td>
-                        <td class="align-middle">5/5</td>
-                        <td class="align-middle"><img src="../../resources/img/png/oculto_categorias.png" alt=""></td>
-                        <td class="align-middle">
-                            <!-- Botón de acción (info/detalles) -->
-                            <button type="button" class="btn img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#agcoment"><img src="../../resources/img/svg/info_icon.svg"
-                                    class="tamanio_edicion_botones" alt=""></button>
-                        </td>
-                    </tr>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td class="align-middle">Comida Rufo Para Perro Cachorro - 44lbs</td>
-                        <td class="align-middle">Juan Alberto</td>
-                        <td class="align-middle">18 de octubre de 2024</td>
-                        <td class="align-middle">5/5</td>
-                        <td class="align-middle"><img src="../../resources/img/png/oculto_categorias.png" alt=""></td>
-                        <td class="align-middle">
-                            <!-- Botón de acción (info/detalles) -->
-                            <button type="button" class="btn img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#agcoment"><img src="../../resources/img/svg/info_icon.svg"
-                                    class="tamanio_edicion_botones" alt=""></button>
-                        </td>
-                    </tr>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td class="align-middle">Comida Rufo Para Perro Cachorro - 44lbs</td>
-                        <td class="align-middle">Juan Alberto</td>
-                        <td class="align-middle">18 de octubre de 2024</td>
-                        <td class="align-middle">5/5</td>
-                        <td class="align-middle"><img src="../../resources/img/png/oculto_categorias.png" alt=""></td>
-                        <td class="align-middle">
-                            <!-- Botón de acción (info/detalles) -->
-                            <button type="button" class="btn img-fluid" data-bs-toggle="modal"
-                                data-bs-target="#agcoment"><img src="../../resources/img/svg/info_icon.svg"
-                                    class="tamanio_edicion_botones" alt=""></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <!-- Encabezados de la tabla -->
+                        <tr class="table-warning">
+                            <th scope="col">Producto</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Fecha de valoración</th>
+                            <th scope="col">Valoración</th>
+                            <th scope="col">Estado</th>
+                            <th scope="col">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td class="align-middle">Comida Rufo Para Perro Cachorro - 44lbs</td>
+                            <td class="align-middle">Juan Alberto</td>
+                            <td class="align-middle">18 de octubre de 2024</td>
+                            <td class="align-middle">5/5</td>
+                            <td class="align-middle"><img src="../../resources/img/png/oculto_categorias.png" alt="">
+                            </td>
+                            <td class="align-middle">
+                                <!-- Botón de acción (info/detalles) -->
+                                <button type="button" class="btn img-fluid" data-bs-toggle="modal"
+                                    data-bs-target="#agcoment"><img src="../../resources/img/svg/info_icon.svg"
+                                        class="tamanio_edicion_botones" alt=""></button>
+                            </td>
+                        </tr>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td class="align-middle">Comida Rufo Para Perro Cachorro - 44lbs</td>
+                            <td class="align-middle">Juan Alberto</td>
+                            <td class="align-middle">18 de octubre de 2024</td>
+                            <td class="align-middle">5/5</td>
+                            <td class="align-middle"><img src="../../resources/img/png/oculto_categorias.png" alt="">
+                            </td>
+                            <td class="align-middle">
+                                <!-- Botón de acción (info/detalles) -->
+                                <button type="button" class="btn img-fluid" data-bs-toggle="modal"
+                                    data-bs-target="#agcoment"><img src="../../resources/img/svg/info_icon.svg"
+                                        class="tamanio_edicion_botones" alt=""></button>
+                            </td>
+                        </tr>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td class="align-middle">Comida Rufo Para Perro Cachorro - 44lbs</td>
+                            <td class="align-middle">Juan Alberto</td>
+                            <td class="align-middle">18 de octubre de 2024</td>
+                            <td class="align-middle">5/5</td>
+                            <td class="align-middle"><img src="../../resources/img/png/oculto_categorias.png" alt="">
+                            </td>
+                            <td class="align-middle">
+                                <!-- Botón de acción (info/detalles) -->
+                                <button type="button" class="btn img-fluid" data-bs-toggle="modal"
+                                    data-bs-target="#agcoment"><img src="../../resources/img/svg/info_icon.svg"
+                                        class="tamanio_edicion_botones" alt=""></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
 
