--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -20,7 +20,7 @@
     <header>
         <!-- Insertar nuestro navbar a esta pantalla usando js -->
         <div id="navbar"></div>
-        <div class="container p-2 mt-5">
+        <div class="container p-2 mt-4">
             <div class="row mt-5">
                 <!-- Automaticamente cada col se va distribuir en la row -->
                 <div class="col-auto">
@@ -61,58 +61,60 @@
         </div>
 
         <!-- Contenido principal: Tabla de marcas -->
-        <div class="container p-4 mt-4">
-            <table class="table">
-                <thead>
-                    <!-- Encabezados de la tabla -->
-                    <tr class="table-warning">
-                        <th scope="col">Imagen</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td><img class="" src="../../resources/img/png/marcas_img_ejemplo.png" alt=""></td>
-                        <td>Pedigree</td>
-                        <td>
-                            <!-- Botones de acciones (eliminar, editar) -->
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                        </td>
-                    </tr>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td><img class="" src="../../resources/img/png/marcas_img_ejemplo.png" alt=""></td>
-                        <td>Pedigree</td>
-                        <td>
-                            <!-- Botones de acciones (eliminar, editar) -->
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                        </td>
-                    </tr>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td><img class="" src="../../resources/img/png/marcas_img_ejemplo.png" alt=""></td>
-                        <td>Pedigree</td>
-                        <td>
-                            <!-- Botones de acciones (eliminar, editar) -->
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="container p-3 mt-4">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <!-- Encabezados de la tabla -->
+                        <tr class="table-warning">
+                            <th scope="col">Imagen</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td><img class="" src="../../resources/img/png/marcas_img_ejemplo.png" alt=""></td>
+                            <td>Pedigree</td>
+                            <td>
+                                <!-- Botones de acciones (eliminar, editar) -->
+                                <button type="button" class="btn btn-light"><img
+                                        src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                                <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                    data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
+                                        width="35px"></button>
+                            </td>
+                        </tr>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td><img class="" src="../../resources/img/png/marcas_img_ejemplo.png" alt=""></td>
+                            <td>Pedigree</td>
+                            <td>
+                                <!-- Botones de acciones (eliminar, editar) -->
+                                <button type="button" class="btn btn-light"><img
+                                        src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                                <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                    data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
+                                        width="35px"></button>
+                            </td>
+                        </tr>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td><img class="" src="../../resources/img/png/marcas_img_ejemplo.png" alt=""></td>
+                            <td>Pedigree</td>
+                            <td>
+                                <!-- Botones de acciones (eliminar, editar) -->
+                                <button type="button" class="btn btn-light"><img
+                                        src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                                <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                    data-bs-target="#editar_marc"><img src="../../resources/img/svg/edit_icon.svg"
+                                        width="35px"></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
 
