--- a/system_huellitas/views/admin/scrud_productos_perros.html
+++ b/system_huellitas/views/admin/scrud_productos_perros.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div id="navbar"></div>
-        <div class="container p-2 mt-5">
+        <div class="container p-2 mt-4">
             <div class="row mt-5">
                 <div class="col-auto">
                     <img src="../../resources/img/svg/products.svg" width="60px">
@@ -63,7 +63,7 @@
             </div>
         </div>
         <!-- Tabla -->
-        <div class="container mt-4">
+        <div class="container mt-5 table-responsive">
             <table class="table align-middle">
                 <thead class="table">
                     <tr>
