--- a/system_huellitas/views/admin/scrud_categorias.html
+++ b/system_huellitas/views/admin/scrud_categorias.html
@@ -20,7 +20,7 @@
     <header>
         <!-- Insertar nuestro navbar a esta pantalla usando js -->
         <div id="navbar"></div>
-        <div class="container p-2 mt-5">
+        <div class="container p-2 mt-4">
             <div class="row mt-5">
                 <!-- Automaticamente cada col se va distribuir en la row -->
                 <div class="col-auto">
@@ -61,65 +61,67 @@
         </div>
 
         <!-- Contenido principal: Tabla de categorías -->
-        <div class="container p-4 mt-5">
-            <table class="table">
-                <thead>
-                    <!-- Encabezados de la tabla -->
-                    <tr class="table-warning">
-                        <th scope="col">Imagen</th>
-                        <th scope="col">Categoría</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td class="align-middle"><img class="tamanio_imagen_tabla"
-                                src="../../resources/img/png/alimentacion_categoria.png" alt=""></td>
-                        <td class="align-middle">Alimentación</td>
-                        <td class="align-middle">Lorem LoremLoremLoremLoremLoremLorem...</td>
-                        <td class="align-middle">
-                            <!-- Botones de acciones (eliminar, editar) -->
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editarCateg"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                        </td>
-                    </tr>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td class="align-middle"><img class="tamanio_imagen_tabla"
-                                src="../../resources/img/png/entretenimiento_categorias.png" alt=""></td>
-                        <td class="align-middle">Entretenimiento</td>
-                        <td class="align-middle">Lorem LoremLoremLoremLoremLoremLorem...</td>
-                        <td class="align-middle">
-                            <!-- Botones de acciones (eliminar, editar) -->
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editarCateg"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                        </td>
-                    </tr>
-                    <!-- Datos de ejemplo en la tabla -->
-                    <tr>
-                        <td class="align-middle"><img class="tamanio_imagen_tabla"
-                                src="../../resources/img/png/salud_cuidado_categorias.png" alt=""></td>
-                        <td class="align-middle">Salud y Cuidado</td>
-                        <td class="align-middle">Lorem LoremLoremLoremLoremLoremLorem...</td>
-                        <td class="align-middle">
-                            <!-- Botones de acciones (eliminar, editar) -->
-                            <button type="button" class="btn btn-light"><img
-                                    src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
-                            <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#editarCateg"><img src="../../resources/img/svg/edit_icon.svg"
-                                    width="35px"></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="container p-3 mt-5">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <!-- Encabezados de la tabla -->
+                        <tr class="table-warning">
+                            <th scope="col">Imagen</th>
+                            <th scope="col">Categoría</th>
+                            <th scope="col">Descripción</th>
+                            <th scope="col">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td class="align-middle"><img class="tamanio_imagen_tabla"
+                                    src="../../resources/img/png/alimentacion_categoria.png" alt=""></td>
+                            <td class="align-middle">Alimentación</td>
+                            <td class="align-middle">Lorem LoremLoremLoremLoremLoremLorem...</td>
+                            <td class="align-middle">
+                                <!-- Botones de acciones (eliminar, editar) -->
+                                <button type="button" class="btn btn-light"><img
+                                        src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                                <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                    data-bs-target="#editarCateg"><img src="../../resources/img/svg/edit_icon.svg"
+                                        width="35px"></button>
+                            </td>
+                        </tr>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td class="align-middle"><img class="tamanio_imagen_tabla"
+                                    src="../../resources/img/png/entretenimiento_categorias.png" alt=""></td>
+                            <td class="align-middle">Entretenimiento</td>
+                            <td class="align-middle">Lorem LoremLoremLoremLoremLoremLorem...</td>
+                            <td class="align-middle">
+                                <!-- Botones de acciones (eliminar, editar) -->
+                                <button type="button" class="btn btn-light"><img
+                                        src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                                <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                    data-bs-target="#editarCateg"><img src="../../resources/img/svg/edit_icon.svg"
+                                        width="35px"></button>
+                            </td>
+                        </tr>
+                        <!-- Datos de ejemplo en la tabla -->
+                        <tr>
+                            <td class="align-middle"><img class="tamanio_imagen_tabla"
+                                    src="../../resources/img/png/salud_cuidado_categorias.png" alt=""></td>
+                            <td class="align-middle">Salud y Cuidado</td>
+                            <td class="align-middle">Lorem LoremLoremLoremLoremLoremLorem...</td>
+                            <td class="align-middle">
+                                <!-- Botones de acciones (eliminar, editar) -->
+                                <button type="button" class="btn btn-light"><img
+                                        src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
+                                <button type="button" class="btn btn-light" data-bs-toggle="modal"
+                                    data-bs-target="#editarCateg"><img src="../../resources/img/svg/edit_icon.svg"
+                                        width="35px"></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
 
