--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -24,7 +24,7 @@
     <header>
         <!-- Insertar nuestro navbar a esta pantalla usando js -->
         <div id="navbar"></div>
-        <div class="container p-2 mt-5">
+        <div class="container p-2 mt-4">
             <div class="row mt-5">
                 <!-- Automaticamente cada col se va distribuir en la row -->
                 <div class="col-auto">
@@ -66,7 +66,7 @@
 
         <!-- Empieza la programación de las tablas
       Primero se define las columnas con "th", "td" es para definir el contenido de cada columna-->
-        <div class="container p-4 mt-4">
+        <div class="container p-4 mt-4 table-responsive">
             <table class="table">
                 <thead>
                     <tr class="table">
@@ -187,8 +187,9 @@
             todo el espacio disponible y sino se ordenen 2 inputs a la par-->
                         <div class="col-sm-12 col-md-6">
                             <p class="fs-8 btn-orange-color fw-bold">Porcentaje</p>
-                            <input type="number" min="1" max="100" class="form-control" placeholder="100%" aria-label="porcentaje"
-                                id="Porcentaje_AgregarCuponFormulario" name="Porcentaje_AgregarCuponFormularioN">
+                            <input type="number" min="1" max="100" class="form-control" placeholder="100%"
+                                aria-label="porcentaje" id="Porcentaje_AgregarCuponFormulario"
+                                name="Porcentaje_AgregarCuponFormularioN">
                         </div>
                     </div>
                     <br>
@@ -237,7 +238,8 @@
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <p class="fs-8 btn-orange-color fw-bold"> Porcentaje</p>
-                            <input type="number" min="1" max="100" class="form-control" placeholder="100%" aria-label="porcentaje">
+                            <input type="number" min="1" max="100" class="form-control" placeholder="100%"
+                                aria-label="porcentaje">
                         </div>
                     </div>
                     <br>
